# helm-schema

./: .bumpversion.toml  .gitattributes  .gitignore  .goreleaser.yaml  .typos.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  agents.md  clippy.toml  cooldown.toml  mise.toml  release.sh  sgconfig.yaml  taskfile.yaml
crates/helm-schema/: Cargo.toml
crates/helm-schema-ast/: Cargo.toml  README.md
crates/helm-schema-ast/src/: capability_branch.rs  document_attribution.rs  expr.rs  expr_function_catalog.rs  fused_rust.rs  helper_output.rs  lib.rs  literal_schema_type.rs  printf_eval.rs  range_structure.rs  resource_span.rs  semver_constraint.rs  template_action.rs  tests.rs  tree_sitter_parser.rs  tree_sitter_utils.rs  values_comments.rs  yaml_syntax.rs
crates/helm-schema-ast/tests/: bitnami_redis_networkpolicy.rs  bitnami_redis_prometheusrule.rs  cert_manager_deployment.rs  cert_manager_service.rs  corpus.rs  ip_item_pattern.rs  nats_operator_rbac.rs  nats_service.rs  nats_service_account.rs  semver_constraint.rs  signoz_postgresql_secrets.rs  signoz_zookeeper_statefulset.rs  signoz_zookeeper_svc.rs  surveyor_configmap.rs  surveyor_hpa.rs  surveyor_service_monitor.rs  url_parse_pattern.rs  zalando_postgres_operator_clusterrole.rs  zalando_postgres_operator_clusterrolebinding.rs  zalando_postgres_operator_deployment.rs  zalando_postgres_operator_postgres_pod_priority_class.rs  zalando_postgres_operator_ui_ingress.rs
crates/helm-schema-cli/: Cargo.toml
crates/helm-schema-cli/src/: analysis.rs  chart.rs  chart_evidence.rs  chart_files.rs  diag_emit.rs  error.rs  flatten.rs  generation.rs  lib.rs  main.rs  manifest_analysis.rs  output_pipeline.rs  provider.rs  provider_builder.rs  required_inference.rs  schema_override.rs  values_roots.rs
crates/helm-schema-cli/tests/: chart_argo_cd.rs  chart_bitnami_redis.rs  chart_cert_manager.rs  chart_cilium.rs  chart_common.rs  chart_corpus.rs  chart_datadog.rs  chart_falco.rs  chart_istiod.rs  chart_kyverno.rs  chart_nack.rs  chart_nats.rs  chart_nats_account_server.rs  chart_nats_kafka.rs  chart_nats_operator.rs  chart_oauth2_proxy.rs  chart_reaudit.rs  chart_sealed_secrets.rs  chart_signoz_postgresql.rs  chart_signoz_signoz.rs  chart_surveyor.rs  chart_tarball_with_dir_entries.rs  chart_traefik.rs  chart_velero.rs  chart_zalando_postgres_operator.rs  chart_zalando_postgres_operator_ui.rs  cli.rs  cli_diag_mode.rs  cli_flags.rs  corpus_integrity.rs  duplicate_helper_name_last_write_wins.rs  fail_in_disabled_dependency_is_gated.rs  fail_negated_truthy_mapping_default_coalesces.rs  flatten_refs.rs  helper_call_inside_string_literal_does_not_leak.rs  infer_required_does_not_mark_synthetic_keys.rs  infer_required_library_default_fallback.rs  library_fallback_does_not_leak_to_sibling.rs  library_literal_default_does_not_leak_type_hints.rs  library_tgz_common_ingress.rs  (+8 more)
crates/helm-schema-core/: Cargo.toml
crates/helm-schema-core/src/: capability.rs  capability_liveness.rs  contract_signals.rs  contract_use.rs  guard.rs  guard_algebra.rs  guard_dnf.rs  lib.rs  output_path.rs  pattern_dialect.rs  predicate.rs  provenance.rs  provider_origin.rs  provider_schema_fragment.rs  provider_schema_use.rs  schema_provider.rs  types.rs  value_path.rs
crates/helm-schema-core/tests/: public_surface.rs
crates/helm-schema-engine/: Cargo.toml
crates/helm-schema-engine/src/: lib.rs
crates/helm-schema-engine/tests/: public_surface.rs
crates/helm-schema-gen/: Cargo.toml
crates/helm-schema-gen/src/: base_schema.rs  condition_encoding.rs  contract_evidence_index.rs  foreign_schema.rs  lib.rs  merge.rs  overlay_lowering.rs  path_metadata.rs  path_resolver.rs  path_schema.rs  program_wrapper.rs  provider_definitions.rs  provider_schema.rs  quoted_serialization.rs  required_inference.rs  required_source_backprojection.rs  resolve_policy.rs  schema_model.rs  schema_node.rs  schema_tree.rs  shared_defs.rs  tests.rs  use_signals.rs  values_yaml.rs
crates/helm-schema-gen/tests/: bitnami_redis_networkpolicy.rs  bitnami_redis_prometheusrule.rs  cert_manager_deployment.rs  cert_manager_service.rs  corpus.rs  helm_render.rs  kind_list_envelope_no_diagnostic.rs  nats_operator_rbac.rs  nats_service.rs  nats_service_account.rs  signoz_postgresql_secrets.rs  signoz_zookeeper_statefulset.rs  signoz_zookeeper_svc.rs  surveyor_configmap.rs  surveyor_hpa.rs  surveyor_service_monitor.rs  zalando_postgres_operator_clusterrole.rs  zalando_postgres_operator_clusterrolebinding.rs  zalando_postgres_operator_deployment.rs  zalando_postgres_operator_postgres_pod_priority_class.rs  zalando_postgres_operator_ui_ingress.rs
crates/helm-schema-go-template-derive/: Cargo.toml
crates/helm-schema-go-template-derive/src/: lib.rs
crates/helm-schema-ir/: Cargo.toml
crates/helm-schema-ir/src/: abstract_document.rs  abstract_document_hole.rs  abstract_document_projection.rs  abstract_eval.rs  abstract_value.rs  analysis_db.rs  assignment_action_plan.rs  binding.rs  bound_helper_call_analysis.rs  bound_helper_env.rs  bound_value_analysis.rs  capability_branch.rs  capability_liveness.rs  chart_facts.rs  compatibility.rs  condition_action_plan.rs  condition_guards.rs  contract.rs  contract_normalization.rs  contract_signal_builder.rs  contract_signals.rs  contract_signals_tests.rs  contract_sink.rs  contract_tests.rs  contract_types.rs  default_type_hints.rs  define_body_cache.rs  document_helper_contract.rs  document_hole_context.rs  document_value_analysis.rs  eval_effect.rs  eval_env.rs  expr_call_eval.rs  expr_eval.rs  expr_eval_tests.rs  (+78 more)
crates/helm-schema-json-schema-minify/: Cargo.toml
crates/helm-schema-k8s/: Cargo.toml
crates/helm-schema-mapper/: Cargo.toml
crates/helm-schema-syntax/: Cargo.toml
crates/helm-schema-template/: Cargo.toml
crates/helm-schema-template-grammar/: Cargo.toml  build.rs
crates/helm-schema-vfs-walk/: Cargo.toml
crates/helm-schema-yaml-template/: Cargo.toml
crates/test-util/: Cargo.toml
grammars/tree-sitter-helm-template/: .editorconfig  Cargo.toml  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
(+882 files in other folders)
