[workspace]
resolver = "2"
members = [
  "crates/clippy-wrapper",
  "crates/test-util",
  "crates/helm-schema-yaml-template",
  "crates/helm-schema-template-grammar",
  "crates/helm-schema-ast",
  "crates/helm-schema-ir",
  "crates/helm-schema-k8s",
  "crates/helm-schema-gen",
]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
unreachable      = "deny"
unimplemented    = "deny"
todo             = "deny"
indexing_slicing = "deny"
missing_errors_doc = "warn"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "Generate an accurate JSON schema for any helm chart"
license = "MIT"
homepage = "https://github.com/romnn/helm-schema"
repository = "https://github.com/romnn/helm-schema"
categories = [
  "development-tools",
  "development-tools::build-utils",
]

[workspace.dependencies]
color-eyre = "0"
thiserror = "2"
indoc = "2"

# safe paths
camino = "1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
serde_json = "1"

# regex
regex = "1"

# json schema validation
jsonschema = "0.28"

# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0"

# virtual file system
vfs = "0"

# tracing
tracing = "0.1"

# tree sitter parser
tree-sitter = "0.25"

# local crates
test-util = { path = "crates/test-util" }
yaml-rust = { path = "crates/helm-schema-yaml-template" }
helm-schema-template-grammar = { path = "crates/helm-schema-template-grammar" }
helm-schema-ast = { path = "crates/helm-schema-ast" }
helm-schema-ir = { path = "crates/helm-schema-ir" }
helm-schema-k8s = { path = "crates/helm-schema-k8s" }
helm-schema-gen = { path = "crates/helm-schema-gen" }
