[workspace]
resolver = "2"
members = [
  "crates/clippy-wrapper",
  "crates/test-util",
  "crates/helm-schema-yaml-template",
  "crates/helm-schema-template-grammar",
  "crates/helm-schema-ast",
  "crates/helm-schema-ir",
  "crates/helm-schema-k8s",
  "crates/helm-schema-gen",
  "crates/json-schema-minify",
  "crates/helm-schema-cli",
]
default-members = [
  "crates/helm-schema-cli",
]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
unreachable      = "deny"
unimplemented    = "deny"
todo             = "deny"
indexing_slicing = "deny"
missing_errors_doc = "warn"

# Allowed
map_unwrap_or = "allow"
assigning_clones = "allow"
struct_excessive_bools = "allow"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "Generate an accurate JSON schema for any helm chart"
license = "MIT"
homepage = "https://github.com/romnn/helm-schema"
repository = "https://github.com/romnn/helm-schema"
categories = [
  "development-tools",
  "development-tools::build-utils",
]

[workspace.dependencies]
color-eyre = "0"
thiserror = "2"
indoc = "2"

# serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
serde_json = "1"

# regex
regex = "1"

# json schema validation. Disable default features to drop reqwest/rustls/tower-http
# — we don't use the validator's built-in HTTP retriever (we have our own
# ureq-based one in helm-schema-cli/src/flatten.rs).
jsonschema = { version = "0.46", default-features = false, features = ["resolve-file"] }

# virtual file system
vfs = "0"

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-perfetto = "0"

# tree sitter parser
tree-sitter = "0.26"

# crypto (for cache source-id hashing)
sha2 = "0.10"

# local crates
test-util = { path = "crates/test-util" }
helm-schema-yaml-template = { path = "crates/helm-schema-yaml-template" }
helm-schema-template-grammar = { path = "crates/helm-schema-template-grammar" }
helm-schema-ast = { path = "crates/helm-schema-ast" }
helm-schema-ir = { path = "crates/helm-schema-ir" }
helm-schema-k8s = { path = "crates/helm-schema-k8s" }
helm-schema-gen = { path = "crates/helm-schema-gen" }
json-schema-minify = { path = "crates/json-schema-minify" }
