[workspace]
resolver = "2"
members = [
  "crates/clippy-wrapper",
  "crates/test-util",
  "crates/helm-schema-template-grammar",
  "crates/helm-schema-core",
  "crates/helm-schema",
  "crates/helm-schema-syntax",
  "crates/helm-schema-ast",
  "crates/helm-schema-ir",
  "crates/helm-schema-k8s",
  "crates/helm-schema-gen",
  "crates/json-schema-walk",
  "crates/json-schema-minify",
  "crates/helm-schema-cli",
]
default-members = [
  "crates/helm-schema-cli",
]
exclude = [
  "grammars/tree-sitter-go-template",
  "grammars/tree-sitter-helm-template",
  "grammars/tree-sitter-yaml",
]

[profile.release]
# lto = true
strip = true
# codegen-units = 1
opt-level = 3

# Debug-mode schema generation dominates `task test` wall time (whole-chart
# corpus tests regenerate large charts per test). Optimizing the production
# crates inside the dev profile keeps test binaries and debug assertions
# unoptimized/enabled while making generation fast enough for interactive
# runs; `"*"` covers external dependencies (serde_json, tree-sitter, ...).
[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.helm-schema-core]
opt-level = 2

[profile.dev.package.helm-schema-syntax]
opt-level = 2

[profile.dev.package.helm-schema-ast]
opt-level = 2

[profile.dev.package.helm-schema-ir]
opt-level = 2

[profile.dev.package.helm-schema-gen]
opt-level = 2

[profile.dev.package.helm-schema-k8s]
opt-level = 2

[profile.dev.package.helm-schema]
opt-level = 2

[profile.dev.package.json-schema-walk]
opt-level = 2

[profile.dev.package.json-schema-minify]
opt-level = 2

[workspace.lints.rust]
warnings = { level = "warn", priority = -1 }
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
todo = "deny"
indexing_slicing = "deny"
missing_errors_doc = "warn"
await_holding_lock = "deny"
# Every `#[allow(...)]` must carry a `reason = "..."` justifying the escape hatch.
allow_attributes_without_reason = "deny"

# Allowed
map_unwrap_or = "allow"
assigning_clones = "allow"
struct_excessive_bools = "allow"

[workspace.metadata.cargo-fc]
install_missing_targets = true
dedupe = true
aggregate_targets = false
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-gnu",
  "aarch64-apple-darwin",
]

[workspace.metadata.cargo-fc.subcommands.lint]
# The workspace's `lint` alias delegates to a clippy shim that preserves structured diagnostics.
diagnostics_only = true

[workspace.package]
version = "0.0.2"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "Generate an accurate JSON schema for any helm chart"
license = "MIT"
homepage = "https://github.com/romnn/helm-schema"
repository = "https://github.com/romnn/helm-schema"
categories = [
  "development-tools",
  "development-tools::build-utils",
]

[workspace.dependencies]
color-eyre = "0"
thiserror = "2"
indoc = "2"
tempfile = "3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
serde_json = "1"

# regex
regex = "1"

# json schema validation. Disable default features to drop reqwest/rustls/tower-http
# — we don't use the validator's built-in HTTP retriever (we have our own
# ureq-based one in helm-schema-cli/src/flatten.rs).
jsonschema = { version = "0.47.0", default-features = false, features = ["resolve-file"] }
# ECMA-262 regex engine: the schema-output dialect gate compiles every
# emitted `pattern` with the dialect Draft-07 actually specifies, instead
# of the laxer engines validators substitute.
regress = "0.11"
referencing = "0.47.0"
url = "2"

# virtual file system
vfs = "0"

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-perfetto = "0"

# tree sitter parser
tree-sitter = "0.26"

# crypto (for cache source-id hashing)
sha2 = "0.11"

# local crates
test-util = { path = "crates/test-util" }
helm-schema-template-grammar = { path = "crates/helm-schema-template-grammar" }
helm-schema-core = { path = "crates/helm-schema-core" }
helm-schema = { path = "crates/helm-schema" }
helm-schema-syntax = { path = "crates/helm-schema-syntax" }
helm-schema-ast = { path = "crates/helm-schema-ast" }
helm-schema-ir = { path = "crates/helm-schema-ir" }
helm-schema-k8s = { path = "crates/helm-schema-k8s" }
helm-schema-gen = { path = "crates/helm-schema-gen" }
json-schema-walk = { path = "crates/json-schema-walk" }
json-schema-minify = { path = "crates/json-schema-minify" }
