[package]
name = "helm-schema-ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
helm-schema-core.workspace = true

# tree-sitter parser
tree-sitter.workspace = true
helm-schema-template-grammar.workspace = true

[dev-dependencies]
color-eyre.workspace = true
indoc.workspace = true
test-util.workspace = true
similar-asserts = "2"
serde_json.workspace = true
serde.workspace = true
