[package]
name = "helm-schema-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
color-eyre.workspace = true

# virtual file system
vfs.workspace = true
camino.workspace = true

# serialization
serde_json.workspace = true

# cli
clap = { version = "4", features = ["derive"] }

# tracing
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

helm-schema-chart.workspace = true
