[package]
name = "helm-schema-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[[bin]]
name = "helm-schema"
path = "src/main.rs"

[dependencies]
color-eyre.workspace = true

# virtual file system
vfs.workspace = true
camino.workspace = true

# serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# cli
clap = { version = "4", features = ["derive"] }

# tracing
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

helm-schema-chart.workspace = true
helm-schema-mapper.workspace = true
helm-schema-template.workspace = true

# chart fetching / unpacking
ureq = "2"
tempfile = "3"
flate2 = "1"
tar = "0"
semver = "1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
