[package]
name = "helm-schema-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true

# safe paths
camino.workspace = true

# serialization
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
