[package]
name = "helm-schema-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
helm-schema-json-schema-walk.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
regex.workspace = true
test-util.workspace = true
