[package]
name = "helm-schema-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
helm-schema-core.workspace = true
helm-schema-ast.workspace = true
helm-schema-ir.workspace = true
helm-schema-gen.workspace = true

