[package]
name = "helm-schema-gen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex.workspace = true

helm-schema-ir.workspace = true
helm-schema-k8s.workspace = true

[dev-dependencies]
color-eyre.workspace = true
indoc.workspace = true
test-util.workspace = true
similar-asserts = "1"
helm-schema-ast.workspace = true
jsonschema.workspace = true
