[package]
name = "helm-schema-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

helm-schema-ast.workspace = true

[dev-dependencies]
color-eyre.workspace = true
indoc.workspace = true
test-util.workspace = true
similar-asserts = "1"
serde_json.workspace = true
