[package]
name = "helm-schema-json-schema-minify"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
tracing.workspace = true
helm-schema-json-schema-walk.workspace = true

[dev-dependencies]
test-util.workspace = true
similar-asserts = "2"
