[package]
name = "helm-schema-k8s"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

helm-schema-ir.workspace = true

# HTTP for upstream schema fetching
ureq = { version = "2", default-features = true }

[dev-dependencies]
color-eyre.workspace = true
similar-asserts = "1"
