[package]
name = "helm-schema-mapper"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true

# virtual file system
vfs.workspace = true

# template parser
tree-sitter.workspace = true
helm-schema-template.workspace = true
helm-schema-template-grammar.workspace = true

[dev-dependencies]
color-eyre.workspace = true
test-util.workspace = true
indoc.workspace = true
