[package]
name = "helm-schema-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true

# tree sitter parser
tree-sitter.workspace = true
helm-schema-template-grammar.workspace = true

[dev-dependencies]
indoc.workspace = true
test-util.workspace = true
similar-asserts = "2"
