[package]
name = "helm-schema-template-grammar"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []

[build-dependencies]
cc = "1"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter.workspace = true
indoc.workspace = true
test-util.workspace = true
similar-asserts = "2"
