[package]
name = "helm-schema-template"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true

# tree sitter
tree-sitter.workspace = true
helm-schema-template-grammar.workspace = true

# l-expression
lexpr = "0"

# colorful debug output
owo-colors = "4"

[dev-dependencies]
test-util.workspace = true
color-eyre.workspace = true
indoc.workspace = true
vfs.workspace = true
