[package]
name = "helm-schema-vfs-walk"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true

vfs.workspace = true
camino.workspace = true
ignore = "0"
