[package]
name = "yaml-rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
linked-hash-map = "0"
thiserror = "2"

[dev-dependencies]
test-util.workspace = true

quickcheck = "1.1"
lexpr = "0.2"
indoc = "2"
similar-asserts = "1"
