[package]
name = "helm-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
flate2 = "1"
jsonschema.workspace = true
referencing.workspace = true
tar = "0.4"
tree-sitter.workspace = true
ureq = { version = "3", default-features = true }
vfs.workspace = true
tracing.workspace = true

helm-schema-ast.workspace = true
helm-schema-ir.workspace = true
helm-schema-gen.workspace = true
helm-schema-k8s.workspace = true
json-schema-walk.workspace = true
json-schema-minify.workspace = true

[dev-dependencies]
color-eyre.workspace = true
indoc.workspace = true
similar-asserts = "2"
test-util.workspace = true
vfs.workspace = true
