[package]
name = "test-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
color-eyre.workspace = true

tracing.workspace = true

vfs.workspace = true

googletest = "0"
similar-asserts = "1"
