[package]
name = "tree-sitter-helm-template"
description = "Helm template grammar for tree-sitter"
version = "0.7.2"
authors = ["Ika <ikatyang@gmail.com>", "Amaan Qureshi <amaanq12@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "yaml", "helm"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/romnn/helm-schema"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26"
