[package]
name = "helm-schema-go-template"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

# version = "0.7.1"
# authors = ["Florian Dieminger <me@fiji-flo.de>"]
# description = "The Golang Templating Language for Rust"
# license = "MIT"
# repository = "https://github.com/fiji-flo/gtmpl-rust"
# documentation = "https://docs.rs/crate/gtmpl"
# keywords = ["golang", "template", "templating"]
# categories = ["template-engine"]
# readme = "README.md"
# include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE"]
# edition = "2018"

# [badges]
# maintenance = { status = "passively-maintained" }

# [features]
# gtmpl_dynamic_template = []

[dependencies]
tracing.workspace = true
lazy_static = "1"
percent-encoding = "2"
# gtmpl_value = "0.5"
helm-schema-go-template-value = { path = "../helm-schema-go-template-value/" }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
helm-schema-go-template-derive = { path = "../helm-schema-go-template-derive/" }
# gtmpl_derive = "0.5"
